Deleted Project to begin anew

--- a/index.html
+++ b/index.html
@@ -4,35 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Animation Test</title>
+    <title>FANtastic Product Launch</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
-    <main>
-        <div class="bg-image">
-            <div class="wrapper">
-                <h1 class="animate__animated animate__pulse">Fantastic</h1>
-            </div>
-            <button>Sign up!</button>
-            <div class="mouse"></div>
-        </div>
-    </main>
-    <section>
-        <div class="txt-wrapper">
-            <div class="txt1">
-                <img src="images/clock.svg" alt="A Clock">
-                <h2>Focus that matters</h2>
-            </div>
-            <div class="txt2">
-                <img src="images/coffee.svg" alt="Cup of Coffee">
-                <h2>Enjoy the enviroment</h2>
-            </div>
-            <div class="txt3">
-                <img src="images/wind.svg" alt="Gust of wind">
-                <h2>Award winning product</h2>
-            </div>
-        </div>
-    </section>
+    
 </body>
 </html>
