template for the landing page created

--- a/index.html
+++ b/index.html
@@ -6,8 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FANtastic Product Launch</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="#" type="image/x-icon">
 </head>
 <body>
+    <section><!--first section with content-->
+        <div class="main">
+            
+        </div>
+    </section>
+
+    <section><!--second section with content-->
+        <div class="main2">
+
+        </div>
+    </section>
+
+    <section><!--third section with content-->
+        <div class="main3">
+
+        </div>
+    </section>
     
+    <section><!--fourth section with content-->
+        <div class="main4">
+
+        </div>
+    </section>
+
+    <section><!--fifth section with content-->
+        <div class="main5">
+
+        </div>
+    </section>
 </body>
 </html>
