--- a/index.html
+++ b/index.html
@@ -6,18 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FANtastic Product Launch</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="#" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/logo-symbol.png" type="image/x-icon">
 </head>
 <body>
+    <a name="top"></a>
     <section><!--first section with content-->
         <div class="main">
-            
+            <div class="mainLogo"><img src="/images/logo-final.png" alt="Fantastic logo"></div>
+            <div class="mainButton"><a href="#">Pre-register now!</a></div>
         </div>
     </section>
 
     <section><!--second section with content-->
         <div class="main2">
-
+            <div class="main2Img"><img src="/images/fan-img.png" alt="image of a fan"></div>
+            <div class="main2Container">
+                <a class="main2Home" href="#top">HOME</a>
+                <h2>The Smart Solution</h2>
+                <p>Control the fan via the app. Adjust temperature & strength of blow</p>
+                <p>The fan automatically starts at whatever temperature you put into the setting.</p>
+                <p>Simple and minimalistic. Easily styled and does not take up much space</p>
+                <a class="main2Mail" href="mailto:info@fantastic.com">Info@fantastic.com</a>
+            </div>
         </div>
     </section>
 
@@ -26,7 +36,7 @@
 
         </div>
     </section>
-    
+
     <section><!--fourth section with content-->
         <div class="main4">
 
