--- a/index.html
+++ b/index.html
@@ -33,19 +33,37 @@
 
     <section><!--third section with content-->
         <div class="main3">
-
+            <a class="main2Home" href="#top">HOME</a>
+            <h2>Bringning the goal closer</h2>
+            <div class="main3Container">
+                <div><img src="/images/SDG-logo.png" alt=""></div>
+                <p class="main3Txt">With our product we we improve the health and well-being of our user. Our business is build upon helping and focusing on the UN goal number 3. We promote well-being for every age and every individual.
+                Since Covid-19 has exalted, the health and well-being, have been more important than ever. With our product, we want to promote good health and clean air in all spaces especially in small offices.</p>
+            </div>
         </div>
     </section>
 
     <section><!--fourth section with content-->
         <div class="main4">
-
-        </div>
+            <a class="main2Home" href="#top">HOME</a>
+            <h1>Future Product Plans</h1>
+            <div class="main4Container">
+                <div><img src="/images/main4img1.png" alt=""><p> the direction of the head through the app</p></div>
+                <div><img src="/images/main4img2.png" alt=""><p>We plan on building a community site where you can interact with other users</p></div>
+                <div><img src="/images/main4img3.png" alt=""><p>Different colors and different sizes to choose from</p></div>
+                <div><img src="/images/main4img4.png" alt=""><p>Different directions of the head and justable for your own personal settings</p></div>
+            </div>  
     </section>
 
     <section><!--fifth section with content-->
         <div class="main5">
-
+            <a class="main2Home" href="#top">HOME</a>
+            <h1>INTENDED USE</h1>
+            <p>1. To turn on the fan - insert the cable with the built in usb2.0/3.0 into your desired device.
+            <p>2. Go to the app "FAN-tastic" and connect to the fan with bluetooth. </p>    
+            <p> 3. From there, you are told to set your prefered temperature settings.</p>
+            <p>4. You only need to do this once, and then the fan will remember your settings (You can change your setting whenever you want to)</p>
+            <p> 5.From now on, you can use the fan by turning it on either on the fan or with the app.  </p></p>
         </div>
     </section>
 </body>
