small changes to section 5

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         <div class="main5">
             <a class="main2Home" href="#top">HOME</a>
             <h1>INTENDED USE</h1>
-            <p>1. To turn on the fan - insert the cable with the built in usb2.0/3.0 into your desired device.
+            <p>1. To turn on the fan - insert the cable with the built in usb2.0/3.0 into your desired device.</p>
             <p>2. Go to the app "FAN-tastic" and connect to the fan with bluetooth. </p>    
-            <p> 3. From there, you are told to set your prefered temperature settings.</p>
-            <p>4. You only need to do this once, and then the fan will remember your settings (You can change your setting whenever you want to)</p>
-            <p> 5.From now on, you can use the fan by turning it on either on the fan or with the app.  </p></p>
+            <p>3. From there, you are told to set your prefered temperature settings.</p>
+            <p>4. You only need to do this once, and then the fan will remember your settings <br>(You can change your setting whenever you want to)</p>
+            <p>5. From now on, you can use the fan by turning it on either on the fan or with the app. </p>
         </div>
     </section>
 </body>
