Added title and logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <a name="top"></a>
     <section><!--first section with content-->
         <div class="main">
-            <div class="mainLogo"><img src="/images/logo-final.png" alt="Fantastic logo"></div>
+            <div class="mainLogo"><img src="/images/logo-small.png" alt="Fantastic logo"></div>
+            <h1>A FAN MADE SMART</h1>
             <div class="mainButton"><a href="#">Pre-register now!</a></div>
         </div>
     </section>
