changes to index.html

--- a/index.html
+++ b/index.html
@@ -67,5 +67,6 @@
             <p>5. From now on, you can use the fan by turning it on either on the fan or with the app. </p>
         </div>
     </section>
+    <script src="app.js"></script>
 </body>
 </html>
