made it to work one.com

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FANtastic Product Launch</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/images/logo-symbol.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
+    <link rel="shortcut icon" href="images/logo-symbol.png" type="image/x-icon">
 </head>
 <body>
     <a name="top"></a>
     <section><!--first section with content-->
         <div class="main">
-            <div class="mainLogo"><img src="/images/logo-small.png" alt="Fantastic logo"></div>
+            <div class="mainLogo"><img src="images/logo-small.png" alt="Fantastic logo"></div>
             <h1>A FAN MADE SMART</h1>
             <div class="mainButton"><a href="#">Pre-register now!</a></div>
         </div>
@@ -20,7 +21,7 @@
 
     <section><!--second section with content-->
         <div class="main2">
-            <div class="main2Img"><img src="/images/fan-img.png" alt="image of a fan"></div>
+            <div class="main2Img"><img src="images/fan-img.png" alt="image of a fan"></div>
             <div class="main2Container">
                 <a class="main2Home" href="#top">HOME</a>
                 <h2>The Smart Solution</h2>
@@ -37,7 +38,7 @@
             <a class="main2Home" href="#top">HOME</a>
             <h2>Bringning the goal closer</h2>
             <div class="main3Container">
-                <div><img src="/images/SDG-logo.png" alt=""></div>
+                <div><img src="images/SDG-logo.png" alt=""></div>
                 <p class="main3Txt">With our product we we improve the health and well-being of our user. Our business is build upon helping and focusing on the UN goal number 3. We promote well-being for every age and every individual.
                 Since Covid-19 has exalted, the health and well-being, have been more important than ever. With our product, we want to promote good health and clean air in all spaces especially in small offices.</p>
             </div>
@@ -49,10 +50,10 @@
             <a class="main2Home" href="#top">HOME</a>
             <h1>Future Product Plans</h1>
             <div class="main4Container">
-                <div><img src="/images/main4img1.png" alt=""><p> the direction of the head through the app</p></div>
-                <div><img src="/images/main4img2.png" alt=""><p>We plan on building a community site where you can interact with other users</p></div>
-                <div><img src="/images/main4img3.png" alt=""><p>Different colors and different sizes to choose from</p></div>
-                <div><img src="/images/main4img4.png" alt=""><p>Different directions of the head and justable for your own personal settings</p></div>
+                <div><img src="images/main4img1.png" alt=""><p> the direction of the head through the app</p></div>
+                <div><img src="images/main4img2.png" alt=""><p>We plan on building a community site where you can interact with other users</p></div>
+                <div><img src="images/main4img3.png" alt=""><p>Different colors and different sizes to choose from</p></div>
+                <div><img src="images/main4img4.png" alt=""><p>Different directions of the head and justable for your own personal settings</p></div>
             </div>  
     </section>
 
